--- a/style2.css
+++ b/style2.css
@@ -1,5 +1,5 @@
 
-#box{
+/* #box{
     width: 100%;
     height: 100vh;
     background-color: brown;
@@ -16,6 +16,11 @@
     width: 300px;
     height: 400px;
     border: 1px solid black;
+} */
+
+#thirdpage{
+    width: 100%;
+
 }
 
 
