--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ html{
     top: 0px;
 }
 
-#navbar::before{
+ #navbar::before{
     content: "";
     background-color: black;
     position: absolute;
@@ -123,7 +123,7 @@ html{
     width:100%;
     z-index: -1;
     opacity: 0.7;
-}
+} 
 
 /* Navigation Bar: Logo and Image */
 #logo{
@@ -156,10 +156,10 @@ html{
     text-decoration: none;
 }
 
-#navbar ul li a:hover{
+ #navbar ul li a:hover{
     color: black;
     background-color: white;
-}
+} 
 
 /* Home Section */
 #home{
@@ -321,5 +321,12 @@ footer{
 
 .center{
     text-align: center;
+}
+
+footer{
+     background-color: black;
+     color: brown;
+     padding: 40px 20px;
+     text-align: center;
 }
 
