--- a/style.css
+++ b/style.css
@@ -228,7 +228,7 @@ html{
 #client-section::before{
  content: "";
  position: absolute;
- background: url('./58df5e7ed91dda274f7afb2dddc4febd.webp');
+ /* background: url('./58df5e7ed91dda274f7afb2dddc4febd.webp'); */
  width: 100%;
  height: 100%;
  z-index: -1;
@@ -261,7 +261,7 @@ html{
     height: 100%;
     z-index: -1;
     opacity: 0.7;
-    background: url('./download.jpeg') no-repeat center center/cover;
+    background: url('./mail-business.svg') no-repeat center center/cover; 
 
 }
 #contact-box{
@@ -324,9 +324,30 @@ footer{
 }
 
 footer{
-     background-color: black;
+     background-color: skyblue;
      color: brown;
      padding: 40px 20px;
      text-align: center;
 }
+
+footer h1{
+    font-size: 50px;
+}
+
+footer h1 p{
+    font-size: 30px;
+}
+
+ @media (max-width:400px){ 
+     #navbar {
+        flex-direction: column;
+        gap: 15px;
+    }
+
+    #navbar ul li{
+
+        justify-content: center;
+    }
+} 
+
 
